<resources>
    <string name="app_name" translatable="false">Emoji Creator</string>

    <string name="this_action_can_contain_ads">This action may contain advertising…</string>
    <string name="Settings">Settings</string>
    <string name="Home">Home</string>
    <string name="My_Creation">My Creation</string>
    <string name="Grant_Permission">Grant Permission</string>
    <string name="Please_grant_all_permissions">Please grant all permissions to access additional functionality.</string>
    <string name="Go_to_setting">Go to setting</string>
    <string name="Permission_is_denied">Permission is denied</string>
    <string name="rating_dialog_title">Do you like this app?</string>
    <string name="rating_dialog_content">Let us know your experience 5 stars is the best on Google Play!</string>
    <string name="Writing_something">Writing something</string>
    <string name="The_best_we_can_get">The best we can get :)</string>
    <string name="send">Send</string>
    <string name="Please_feedback">Please feedback</string>
    <string name="ok">Ok</string>
    <string name="pencil">Pencil</string>
    <string name="airbrush">AirBrush</string>
    <string name="calligraphy">Calligraphy</string>
    <string name="pen">Pen</string>
    <string name="eraser">Eraser</string>
    <string name="undo">undo()</string>
    <string name="redo">redo()</string>
    <string name="clear">clear()</string>
    <string name="reset_zoom">resetZoom()</string>
    <string name="enterzoommode">enterZoomMode()</string>
    <string name="exitzoommode">exitZoomMode()</string>
    <string name="import_bitmap">setDrawingBitmap()</string>
    <string name="export">export()</string>
    <string name="export_without_bg">exportWithoutBackground()</string>
    <string name="title_activity_photo_editor">PhotoEditorActivity</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_dialog_title">Upload Image</string>
    <string name="upload_picker_title">Select Picture</string>
    <string name="directory_create_fail">Failed to create directory</string>
    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">Continue</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="Welcome_to_Your_Emoji_Art">Welcome to Your Emoji Art!</string>
    <string name="Express_yourself_with_custom">Express yourself with custom emojis and stickers, crafted by yourself.</string>
    <string name="Start_Your_Sticker_Journey">Start Your Sticker Journey!</string>
    <string name="Create_personalized_emojis">Create personalized emojis and stickers, express your feelings by emojis.</string>
    <string name="Sticker_and_Emoji_Joy">Sticker and Emoji Joy!</string>
    <string name="Enjoy_making_unique_stickers">Enjoy making unique stickers and emojis that capture your style and mood.</string>
    <string name="search">Search</string>
    <string name="Make_Your_Symbol">Make Your Symbol</string>
    <string name="Express_Yourself">Express Yourself</string>
    <string name="Create">Create</string>
    <string name="Suggest_for_you">Suggest for you</string>
    <string name="Select_Your_Type">Select Your Type</string>
    <string name="Please_indicate_whether">Please indicate whether you want to create emoji or sticker.</string>
    <string name="Emoji_Maker">Emoji Stitch</string>
    <string name="Create_Emoji">Create Emoji</string>
    <string name="Sticker_Maker">Sticker Maker</string>
    <string name="Create_Sticker">Create Sticker</string>
    <string name="recent">Recent</string>
    <string name="face">Face</string>
    <string name="eyes">Eyes</string>
    <string name="brow">Brow</string>
    <string name="mouth">Mouth</string>
    <string name="hand">Hand</string>
    <string name="nose">Nose</string>
    <string name="beard">Beard</string>
    <string name="hat">Hat</string>
    <string name="glass">Glass</string>
    <string name="accessory">Accessory</string>
    <string name="hair">Hair</string>
    <string name="background">Background</string>
    <string name="languages">Languages</string>
    <string name="rate">Rate</string>
    <string name="share">Share</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share_app">Share to</string>
    <string name="stickers">stickers</string>
    <string name="sticker">sticker</string>
    <string name="items">items</string>
    <string name="item">item</string>

    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="add_to_telegram">Add to Telegram</string>
    <string name="download">Download</string>
    <string name="add_to_package">Add to Package</string>
    <string name="save_to_package">Save to Package</string>
    <string name="package_text">Package</string>
    <string name="draft">Draft</string>
    <string name="new_package">New Package</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_package_name">Please enter package name</string>
    <string name="package_name_already_exists">Package name already exists</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="explore_more_stickers">Explore More Stickers</string>
    <string name="congratulations">Congratulations!</string>
    <string name="your_emoji_has_been_saved_to_my_creation">Your emoji has been saved to \n\"My creation\".</string>
    <string name="please_select_at_least_one_package">Please select at least one package</string>
    <string name="please_wait_for_the_sticker_to_load">Please wait for the sticker to load</string>
    <string name="no_app_found_to_handle_the_share_action">No app found to handle the share action</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="downloaded_successfully_to_gallery">Downloaded successfully to gallery</string>
    <string name="download_failed">Download failed</string>
    <string name="some_stickers_are_not_downloaded">Some stickers are not downloaded</string>
    <string name="please_wait_until_all_stickers_are_loaded">Please wait until all stickers are loaded</string>
    <string name="home_nav_header_title">Emoji Stitch</string>
    <string name="my_creation_nav_header_title">My Creation</string>
    <string name="settings_nav_header_title">Settings</string>
    <string name="there_is_no_item_in_this_folder">There is no item in this folder</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_file_will_be_deleted_on_your_device">This file will be deleted on your device.</string>
    <string name="this_file_will_be_deleted_from_your_creation">This file will be deleted from your creation.</string>
    <string name="delete">Delete</string>
    <string name="quit">Quit</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="error_adding_sticker_pack">"Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack"</string>
    <string name="invalid_action">Invalid Action</string>
    <string name="invalid_action_msg">In order to be applied to WhatsApp, the sticker pack must have at least 3 stickers. Please add more stickers first.</string>
    <string name="Your_draft_will_be_saved">Are you sure you want to exit?  Your draft will be saved.</string>
    <string name="Layer">Layer</string>
    <string name="Edit_Emoji">Edit Emoji</string>
    <string name="no_results_founded">No results founded!</string>
    <string name="no_internet">No internet!</string>
    <string name="we_couldn_t_find_any_results_that_matched_your_searching">We couldn\'t find any results that matched your searching.</string>
    <string name="there_is_no_internet_connection_please_check_your_internet_connection">There is no internet connection. Please check your internet connection</string>
    <string name="try_again">Try Again</string>
    <string name="New_Package">New Package</string>
    <string name="create_more_emoji">Create More Emoji</string>
    <string name="permission">Permission!!</string>
    <string name="this_app_needs_permissions_below_to_work_properly">This app needs permissions below to work properly.</string>
    <string name="allow_access">Allow access</string>
    <string name="continue_text">Continue</string>
    <string name="this_is_a_sample_file">This is a sample file</string>
    <string name="example_emoji_1">Example: Emoji 1</string>
    <string name="thank_you_for_rating_us">Thank you for rating us!</string>
    <string name="more_than_50_items_at_once">You can\'t create more than 50 items at once. Please replace your existing items</string>
    <string name="Unlock_items">Unlock items</string>
    <string name="Watch_ads_to_unlock">Watch ads to unlock for free.</string>
    <string name="Watch_Video">Watch Video</string>
    <string name="funny_emoji">Funny Emoji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_earth">The Earth</string>
    <string name="what_do_you_speak">What do you speak?</string>
    <string name="suggestions_for_you">Suggestions for you</string>
    <string name="add">Add</string>
    <string name="setting">Setting</string>
    <string name="do_you_like_this_app">Do you like this app?</string>
    <string name="let_us_know_your_experience_5_stars_is_the_best_on_google_play">Let us know your experience 5 stars is the best on Google Play!</string>
    <string name="submit">Submit</string>
    <string name="okay">Okay</string>
    <string name="excellent">Excellent!</string>
    <string name="thank_you_for_taking_the_time_to_rate_us_i_m_really_appreciate_that">Thank you for taking the time to rate us. I’m really appreciate that.</string>
    <string name="version">Version</string>

</resources>