<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/_13sdp"
    android:paddingVertical="@dimen/_17sdp"
    android:orientation="vertical"
    android:background="@drawable/bg_delete_dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.app.friendschat.utils.custom_view.MovableText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="@dimen/_20sdp"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/color_101828"
            android:text="@string/are_you_sure"
            android:fontFamily="@font/urbanist_semi_bold"/>

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_close_delete_dialog"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_file_will_be_deleted_on_your_device"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:textColor="@color/color_475467"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/urbanist_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_quit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/border_share_or_download_button">

            <com.app.friendschat.utils.custom_view.MovableText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/quit"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/black"
                android:fontFamily="@font/urbanist_semi_bold"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:background="@drawable/border_bg_delete_button">

            <com.app.friendschat.utils.custom_view.MovableText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/delete"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/white"
                android:fontFamily="@font/urbanist_semi_bold"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>