<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_dialog_unlock_items"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="20dp">

        <RelativeLayout
            android:id="@+id/rl_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/iv_close"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/Unlock_items"
                android:textColor="@color/color_101828"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_close_delete_dialog" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/urbanist_regular"
            android:text="@string/Watch_ads_to_unlock"
            android:textColor="@color/color_475467"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/ll_watch_video"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="13dp"
            android:background="@drawable/border_button_watch_video"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_watch_video" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/urbanist_semi_bold"
                android:text="@string/Watch_Video"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>