<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_guide"
            android:layout_width="match_parent"
            android:layout_height="262dp"
            android:layout_marginTop="25dp"
            android:src="@drawable/new_img_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="19dp"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="-2dp"
            android:src="@drawable/img_polygon"
            app:layout_constraintBottom_toTopOf="@id/llContent"
            app:layout_constraintEnd_toEndOf="@id/llContent" />

        <LinearLayout
            android:id="@+id/llContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="-65dp"
            android:background="@drawable/new_bober_white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="16dp"
            app:layout_constraintTop_toBottomOf="@id/img_guide">

            <TextView
                android:id="@+id/tvTile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/urbanist_extra_bold"
                android:gravity="center"
                android:maxLines="2"
                android:text="@string/do_you_like_this_app"
                android:textColor="@color/color_095467"
                android:textSize="@dimen/_16ssp" />


            <TextView
                android:id="@+id/tvContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:ellipsize="end"
                android:fontFamily="@font/urbanist_regular"
                android:gravity="center"
                android:lineHeight="@dimen/_20ssp"
                android:text="@string/let_us_know_your_experience_5_stars_is_the_best_on_google_play"
                android:textColor="#344054"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvTile" />

            <RatingBar
                android:id="@+id/rtb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:numStars="5"
                android:progressTint="#FDB022"
                android:secondaryProgressTint="#FDB022"
                android:stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/rlCancel"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_circle_white_background">

                    <com.app.friendschat.utils.custom_view.MovableText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/urbanist_semi_bold"
                        android:text="@string/cancel"
                        android:textColor="@color/color_0C111D"
                        android:textSize="@dimen/_13ssp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlSend"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginStart="@dimen/_17sdp"
                    android:layout_weight="1"
                    android:background="@drawable/border_select_language">

                    <com.app.friendschat.utils.custom_view.MovableText
                        android:id="@+id/txtSend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/urbanist_semi_bold"
                        android:text="@string/submit"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>