<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_home"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_7sdp">

            <RelativeLayout
                android:id="@+id/relay_home"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_home_select" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Home"
                android:fontFamily="@font/urbanist_semi_bold"
                android:textColor="@color/color_4E5BA6"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_my_creation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_7sdp">

            <RelativeLayout
                android:id="@+id/relay_my_creation"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/iv_my_creation"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_my_creation" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_my_creation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/My_Creation"
                android:fontFamily="@font/urbanist_semi_bold"
                android:textColor="@color/color_A3A3A3"
                android:textSize="@dimen/_10ssp"  />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_7sdp">

            <RelativeLayout
                android:id="@+id/relay_setting"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_28sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/iv_setting"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_settings" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/Settings"
                android:fontFamily="@font/urbanist_semi_bold"
                android:textColor="@color/color_A3A3A3"
                android:textSize="@dimen/_10ssp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
